# ImageToPPT

./: CMakeLists.txt  Image2Ppt.pro  ImageToEditablePptx.pro  ImageToPPT.pro  ImageToPPT项目报告.docx  README.md
include/: ImageCanvas.h  Region.h  RegionDialog.h  mainwindow.h  pptxexporter.h  zipwriter.h
source/: ImageCanvas.cpp  RegionDialog.cpp  main.cpp  mainwindow.cpp  pptxexporter.cpp  zipwriter.cpp
